# narsil

./: .gitignore  .narsil.dhall  .nix-compile.dhall.example  .nix-compile.dhall.nixpkgs  LICENSE  README.md  flake.nix  fourmolu.yaml  narsil.cabal
.github/workflows/: ci.yml
app/: Main.hs
bench/: Bench.hs  NixpkgsBench.hs
config/: README.md  package.dhall  profiles.dhall  render.dhall  rules.dhall  types.dhall
doc/: HACKING.md  HOUSE_STYLE.md  SPECIFICATION.md  TYPOGRAPHY.md  nixpkgs-symbol-completion.md
doc/book/: book.toml
doc/book/src/: SUMMARY.md  architecture.md  bash-pipeline.md  benchmarks.md  builtins.md  cli.md  configuration.md  contract.md  credits.md  emit-config.md  getting-started.md  introduction.md  layout-conventions.md  lsp.md  nix-inference.md  policy.md  safety.md  scope-graphs.md  testing.md  type-checker.md
doc/design/: contract.md  layout-enforcement.md  module-system.md  output-rework.md  pretty-printing.md  rows.md
flake-modules/: default.nix
lib/: Narsil.hs
lib/Narsil/Bash/: Builtins.hs  Facts.hs  Parse.hs  Patterns.hs  Types.hs
lib/Narsil/Bash/Facts/: Token.hs  Value.hs
lib/Narsil/CLI/: Bash.hs  CI.hs  Check.hs  Dispatch.hs  Report.hs  Types.hs
lib/Narsil/Core/: Config.hs  Diagnostic.hs  Draw.hs  Log.hs  Profiles.hs  Safety.hs  Span.hs
lib/Narsil/Docs/: Extract.hs  Search.hs  Types.hs
lib/Narsil/Emit/: Config.hs
lib/Narsil/Inference/: Nix.hs
lib/Narsil/Inference/Bash/: Constraint.hs  Schema.hs  Unify.hs
lib/Narsil/Inference/Nix/: Annotate.hs  Builtins.hs  Constraint.hs  Environment.hs  Lib.hs  Module.hs  Scheme.hs  Type.hs  Unify.hs
lib/Narsil/LSP/: Handlers.hs  ProjectCache.hs  Server.hs
lib/Narsil/LSP/Handlers/: Cursor.hs  Diagnostics.hs  Features.hs  Project.hs  SemanticTokens.hs  Symbols.hs
lib/Narsil/Layout/: Closure.hs  Convention.hs  Edge.hs  Graph.hs  Import.hs  ModuleKind.hs  ModuleSystem.hs  Naming.hs  Scope.hs
lib/Narsil/Layout/Convention/: Naming.hs  Presets.hs  Types.hs  Validate.hs
lib/Narsil/Layout/Scope/: Build.hs  Dhall.hs  Resolve.hs  Types.hs
lib/Narsil/Lint/: Combined.hs  Derivation.hs  Forbidden.hs  Nix.hs  Packages.hs  Patterns.hs
lib/Narsil/Nixpkgs/: Cache.hs  Eval.hs  EvalRepl.hs  Index.hs  OptionsIndex.hs  Oracle.hs  StorePath.hs  Warm.hs
lib/Narsil/Syntax/: Annotation.hs  Effect.hs  Format.hs  Parse.hs  Pretty.hs
scripts/: ci-sweep.sh
straylint/: Main.hs
test/: Adversarial.hs  AnnotateSpec.hs  ClosureSpec.hs  EmitConfigSpec.hs  Fixtures.hs  FlakePartsTest.hs  InferRecursiveSpec.hs  InferenceOracleSpec.hs  LSPFeatureSpec.hs  Layout.hs  MoreFixtures.hs  MutationSpec.hs  NixAdversarial.hs  NixpkgsCacheSpec.hs  NixpkgsIndexSpec.hs  NixpkgsOracleSpec.hs  NixpkgsWarmSpec.hs  Oracle.hs  OracleFuzz.hs  OracleSweep.hs  ProfileSpec.hs  ProjectCacheSpec.hs  Props.hs  Psychotic.hs  RowLacksSpec.hs
test/fixtures/flake-parts/: flake.nix  lib.nix
test/fixtures/flake-parts/dev/: flake-module.nix  flake.nix
test/fixtures/flake-parts/dev/tests/: eval-tests.nix  template.nix
test/fixtures/flake-parts/examples/project-commands/: flake.nix
test/fixtures/flake-parts/examples/shell-environments/: flake.nix
test/fixtures/flake-parts/extras/: bundlers.nix  easyOverlay.nix  flakeModules.nix  modules.nix  partitions.nix
test/fixtures/flake-parts/lib/memoize/: measure-bytes-per-char.nix  memoize.nix  test.nix
test/fixtures/flake-parts/modules/: apps.nix  checks.nix  debug.nix  devShells.nix  flake.nix  formatter.nix  legacyPackages.nix  moduleWithSystem.nix  nixosConfigurations.nix  nixosModules.nix  nixpkgs.nix  overlays.nix  packages.nix  perSystem.nix  transposition.nix  withSystem.nix
test/fixtures/flake-parts/template/default/: flake.nix
test/fixtures/flake-parts/template/multi-module/: flake.nix
test/fixtures/flake-parts/template/multi-module/hello/: flake-module.nix
test/fixtures/flake-parts/template/package/: flake.nix
test/fixtures/flake-parts/template/package/hello/: package.nix  test.nix
test/fixtures/flake-parts/template/unfree/: flake.nix
test/fixtures/layout-projects/good/: flake.nix
test/fixtures/layout-projects/perturbed/: .narsil.dhall  flake.nix  stray-module.nix
test/fixtures/layout-projects/perturbed/flake-modules/: default.nix
test/fixtures/layout/all-flake-module/fail/: extra.nix  package.nix
test/fixtures/layout/all-flake-module/fail/flake-modules/bare/: default.nix
test/fixtures/layout/all-flake-module/fail/flake-modules/nixosmod/: default.nix
test/fixtures/layout/all-flake-module/fail/flake-modules/overlay/: default.nix
test/fixtures/layout/all-flake-module/fail/flake-modules/shell/: default.nix
test/fixtures/layout/all-flake-module/fail/modules/: thing.nix
test/fixtures/layout/all-flake-module/pass/: flake.nix
test/fixtures/layout/all-flake-module/pass/flake-modules/: default.nix
test/fixtures/layout/all-flake-module/pass/flake-modules/fetchers/: default.nix
test/fixtures/layout/all-flake-module/pass/flake-modules/models/: default.nix
test/fixtures/layout/flake-parts/fail/lib/: foo.nix
test/fixtures/layout/nixos-config/fail/profiles/: alice.nix
test/fixtures/layout/nixos-config/pass/hosts/: laptop.nix
test/fixtures/layout/straylight/pass/: flake.nix
test/fixtures/nix/: isospin-main.nix  kernel.nix  qemu-common.nix  verified-interp-limits.nix
test/fixtures/nix/modules/nixos/: gpu-broker.nix
test/oracle/: nixpkgs-baseline.json
tools/: adversarial_test.py
tools/adversarial_output/: deep_attrset_500.nix  deep_func_calls_200.nix  deep_let_200.nix  default_complex_expr.nix  dynamic_attr_access.nix  emoji_in_string.nix  indirect_cycle.nix  large_list_10k.nix  long_attr_path_26.nix  long_pattern_100.nix  mutual_recursion.nix  nested_with.nix  self_ref_func.nix  unicode_varname.nix  variadic_pattern.nix  with_complex_expr.nix  with_lambda.nix  zero_width_chars.nix
tools/clicheck/: README.md  check.sh
tools/fmtparity/: README.md  check.sh
tools/fmtparity/corpus/: 06-nested-set.nix  08-list-in-binding.nix  09-lambda.nix  11-lambda-set.nix  12-with.nix  14-inherit.nix
tools/layoutcheck/: check.sh
(+12 files in other folders)
